@@ -1,15 +1,15 @@
 Package: EvCombR
 Type: Package
 Title: Evidence Combination in R
-Version: 0.1-2
-Date: 2014-04-22
+Version: 0.1-3
+Date: 2022-04-20
 Author: Alexander Karlsson
 Maintainer: Alexander Karlsson <alexander.karlsson@his.se>
 Copyright: Alexander Karlsson
-Description: Package for combining pieces of evidence
-License: MIT + file LICENSE
-Depends: methods
-Packaged: 2014-04-24 14:28:16 UTC; karx
+Description: Combine pieces of evidence in the form of uncertainty representations.
+License: GPL (>= 3)
+Imports: methods, utils
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-04-24 18:24:54
+Packaged: 2022-04-20 06:44:23 UTC; karx
+Date/Publication: 2022-04-20 07:12:30 UTC
