@@ -1,2 +1,0 @@
-YEAR: 2014
-COPYRIGHT HOLDER: Alexander Karlsson
