@@ -1,0 +1,1 @@
+The GNU GPL license can be found at: https://www.r-project.org/Licenses/
