@@ -1,10 +1,11 @@
-6f48ab45315b43b8664695b9785ff8d2 *DESCRIPTION
-c2a5e8535d5b0a058cd91369a2a35c95 *LICENSE
-09a56450082221f5e0847a3c7c29e468 *NAMESPACE
-263adedca0b0e1c47c1530f9651668f7 *R/EvCombR.R
-a633988ff01fd90134c4ea99f35ca3c7 *inst/CITATION
-81eb311fabad6df36f1aaaab99f59434 *inst/NEWS.Rd
+7f944e294b271806ac5b68887d32d6e1 *DESCRIPTION
+807f9763c1619e3de60f06f76cc15a6a *LICENSE.note
+be31c3bbfd3e5fc4d3dbfa158a3c7dd3 *NAMESPACE
+9019f31367456a1120cfc956c8753ea4 *R/EvCombR.R
+2a4740ed98778503948c3a4f3f5857bf *inst/CITATION
+abb1f168018f62b8b8e6808c3c1c4aac *inst/NEWS.Rd
 aae0d83ed0f4a6780db726f04c770e90 *man/EvCombR-package.Rd
+20aa840348bf2ebf6002a1a9e7db60ac *man/EvCombRLicense.Rd
 b42055e8a9d4d6703f541df5d3ca4292 *man/cComb-methods.Rd
 8ec4445844759b863a5f9cdf583a6028 *man/cComb.Rd
 a8d3cd18d7b9397d75127bd408b665f2 *man/credal-class.Rd
