@@ -1,0 +1,23 @@
+\name{EvCombRLicense}
+\alias{EvCombRLicense}
+\title{
+License information for EvCombR
+}
+\description{
+Displays some license information about EvCombR.
+}
+\usage{
+EvCombRLicense()
+}
+
+
+
+\author{
+Alexander Karlsson
+}
+
+
+\examples{
+EvCombRLicense()
+}
+
