@@ -2,6 +2,14 @@
 \title{News for EvCombR}
 \encoding{UTF-8}
 
+\section{Version 0.1-3 (2022-04-20)}{
+    \itemize{
+        \item License changed to GPL (>=3)
+		\item Description and namespace files changed
+		\item Added function EvCombRLicense	
+    }
+}      
+
 \section{Version 0.1-2 (2014-04-22)}{
     \itemize{
         \item \code{[[<-} has been added for mass functions.  
@@ -29,7 +37,7 @@
         \item First release containing: Bayesian, credal (based on intervals), Yager's, Dempster's, and
               modified Dempster's combination. The package also contains function 
               for calculating pignistic and relative plausibility transforms, upper
-              and lower bounds, and a discouinting operator for mass functions. 
+              and lower bounds, and a discounting operator for mass functions. 
     }
 }
 
